# studienarbeit_gateway

./: .project  .pydevproject  CMakeLists.txt  LICENSE  README.md  package.xml  xieziban.txt
examples/: Gateway2Service.cpp  Gateway2Service_vorlag.cpp  Gateway2UA_Method.cpp  Gateway2UA_Method_vorlag.cpp  (+8 more)
src/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Gateway2Service.cpp  Gateway2Service_vorlag.cpp  Gateway2Topic.cpp  Gateway2Topic_vorlag.cpp  Gateway2UA_Method.cpp  Gateway2UA_Method_vorlag.cpp  Gateway2UA_Object.cpp  Gateway2UA_Object_vorlag.cpp  Makefile  Werkzeug2Service  Werkzeug2Service.cpp  Werkzeug2Topic  Werkzeug2Topic.cpp  Werkzeug2UA_Method  Werkzeug2UA_Method.cpp  Werkzeug2UA_Object  Werkzeug2UA_Object.cpp  cmake_install.cmake  controller.cpp  moreservice.cpp  open62541.c  open62541.cbp  open62541.h  ros_client.cpp  ros_server.cpp  ros_talker.cpp  sample_opcua_client.cpp  sample_opcua_server.cpp  sample_publisher.cpp  sample_subscriber.cpp  server2test  server2test.c  test.cpp
src/doc/: Makefile  cmake_install.cmake
src/examples/: Makefile  cmake_install.cmake
src/examples/nodeset/: Makefile  cmake_install.cmake
src/src_generated/: CMakeLists.txt  example_nodeset.c  example_nodeset.h  hello.c  open62541.pc  ua_config.h  ua_namespace0.c  ua_namespace0.h  ua_statuscode_descriptions.c  ua_transport_generated.c  ua_transport_generated.h  ua_transport_generated_encoding_binary.h  ua_transport_generated_handling.h  ua_types_generated.c  ua_types_generated.h  ua_types_generated_encoding_binary.h  ua_types_generated_handling.h
(+10 files in other folders)
